# ESP_DRONE_REMOTEID

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  descrizione.md  idf_component.yml  partitions.csv
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  deploy-pages.yml  greetings.yml  pages.yml  release.yml
ESP32_DRONE_REMOTE_ID_Firmware/: idf_component.yml  partitions_2mb.csv  sdkconfig.defaults
ESP32_DRONE_REMOTE_ID_Firmware/components/esp_remote_id/: CMakeLists.txt  Kconfig.projbuild
ESP32_DRONE_REMOTE_ID_Firmware/components/esp_remote_id/include/: ble_tx.h  cli.h  esp_remote_id.h  led_status.h  led_ws2812.h  mav2odid.h  mavlink_parser.h  opendroneid.h  rid_auth.h  rid_dronecan.h  rid_kalman.h  rid_lighting.h  rid_mavlink_tx.h  rid_mavlink_usb.h  rid_ota.h  rid_patrol.h  wifi_tx.h
ESP32_DRONE_REMOTE_ID_Firmware/components/esp_remote_id/src/: ble_tx.c  cli.c  esp_remote_id.c  led_status.c  led_ws2812.c  mavlink_parser.c  msp_parser.c  nmea_parser.c  nvs_storage.c  rid_auth.c  rid_dronecan.c  rid_kalman.c  rid_lighting.c  rid_mavlink_tx.c  rid_mavlink_usb.c  rid_ota.c  rid_patrol.c  web_config.c  wifi_tx.c
ESP32_DRONE_REMOTE_ID_Firmware/components/esp_remote_id/webui/: config.html
ESP32_DRONE_REMOTE_ID_Firmware/main/: main.c
ESP_DRONE_REMOTEID_ANALIZER/: __init__.py  __main__.py  build.spec  capture.py  decoder.py  gui.py  requirements.txt  rid_cli.py
ESP_DRONE_REMOTEID_ANALIZER/web/: app.js  index.html
ESP_DRONE_REMOTEID_Analyzer/: __init__.py  __main__.py  build.spec  capture.py  gui.py  requirements.txt  rid_cli.py  server.py
ESP_DRONE_REMOTEID_Analyzer/tools/: __init__.py  meshtastic_bridge.py  public_key_verify.py  serial_bridge.py  timing_analysis.py
ESP_DRONE_REMOTEID_Analyzer/web/: app.js  index.html  style.css
RID_Hub/: main.js  package.json  preload.js
RID_Hub/rid_hub/: __init__.py  __main__.py  build.spec  capture.py  gui.py  rid_cli.py  server.py
RID_Hub/rid_hub/tools/: ble_validation.py  mesh_mapper.py  nvs_provisioning.py  openapi_spec.yaml  scanner_wifi_ble.py
RID_Hub/rid_hub/web/: app.js  index.html
components/esp_remote_id/: CMakeLists.txt
components/esp_remote_id/include/: ble_tx.h  esp_remote_id.h  mav2odid.h  mavlink_parser.h  msp_parser.h  nmea_parser.h  nvs_storage.h  protocol_detect.h  web_config.h  wifi_tx.h
components/esp_remote_id/src/: ble_tx.c  esp_remote_id.c  mav2odid.c  mavlink_parser.c  msp_parser.c  nmea_parser.c  nvs_storage.c  opendroneid.c  protocol_detect.c  web_config.c  wifi.c  wifi_tx.c
components/esp_remote_id/webui/: config.html
components/id_open/: CMakeLists.txt  README.md  id_open.cpp  id_open.h  id_open_beacon.cpp  id_open_esp32.cpp
components/opendroneid/: CMakeLists.txt  opendroneid.h
docs/: config(demo).html  guide.html  index.html  innovation_diy.md  manifest.json  prototype_bom.md  shared.css
legacy/id_open/: alt_unix_time.c
legacy/opendroneid/: CMakeLists.txt  README.md  utm.h
main/: CMakeLists.txt  main.c
todolist/: Nuovo Documento di testo.txt  softwarestatus.md
tools/: styles.css
tools/rid_analyzer/: __init__.py  __main__.py  build.spec  capture.py  decoder.py  gui.py  requirements.txt  rid_cli.py
tools/rid_analyzer/analyzers/: range.py  timing.py
tools/rid_analyzer/web/: app.js  index.html  (+1 more)
