idf_component_register(
    SRCS
        "src/protocol_detect.c"
        "src/nmea_parser.c"
        "src/msp_parser.c"
        "src/mavlink_parser.c"
        "src/mav2odid.c"
        "src/opendroneid.c"
        "src/wifi.c"
        "src/wifi_tx.c"
        "src/ble_tx.c"
        "src/web_config.c"
        "src/nvs_storage.c"
        "src/led_status.c"
        "src/esp_remote_id.c"
        "src/rid_patrol.c"
    INCLUDE_DIRS
        "include"
        "mavlink"
    REQUIRES
        esp_wifi
        bt
        nvs_flash
        esp_event
        esp_netif
        esp_system
        freertos
        esp_http_server
        app_update
        esp_driver_uart
        esp_driver_gpio
        mbedtls
        efuse
    EMBED_TXTFILES
        "webui/config.html"
)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error=address-of-packed-member)
